# GSheet_Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  plan.md  prompt.txt  pyproject.toml  server.py
configurations/: config.ini
constants/: constants.py  globals.py
services/: googleSheetServices.py
test/: test.py
tools/data_analysis/: analysis_operations.py
tools/data_operations/: operations.py
tools/formattings/: formattings.py
tools/formulas/: formulas_operations.py
tools/rows_and_coloumns_operations/: rows&Cols_operations.py  rows_and_Cols_operations.py
tools/sheet_metadata/: sheet_metadata_operations.py
tools/sheet_operations/: operations.py
tools/visualizations/: visualizations.py
utils/: configReader.py  logger.py  utils.py
