[project]
name = "gsheet-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker>=40.1.0",
    "fastmcp>=2.14.3",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.25.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pygsheet>=0.1.19b25",
    "pygsheets>=2.0.6",
    "seaborn>=0.13.2",
]
